@@ -17,9 +17,10 @@ ubuntu-dev-tools (0.120) UNRELEASED; urgency=low
 
   [ Benjamin Drung ]
   * data/ubuntu.csv: Add Oneiric Ocelot to the list of know releases.
-  * ubuntutools.distro_info: Fix TypeError crash (LP: #731398).
+  * ubuntutools.distro_info: Fix TypeError crash and add a test case to
+    catch regressions (LP: #731398).
 
- -- Benjamin Drung <bdrung@debian.org>  Tue, 08 Mar 2011 16:54:59 +0100
+ -- Benjamin Drung <bdrung@debian.org>  Tue, 08 Mar 2011 17:19:55 +0100
 
 ubuntu-dev-tools (0.119) unstable; urgency=low
 
